Fix dropdown to add repository on mobile devices

--- a/src/components/AddRepositoryDropdown/AddRepositoryDropdown.scss
+++ b/src/components/AddRepositoryDropdown/AddRepositoryDropdown.scss
@@ -1,5 +1,5 @@
 .add-repository-dropdown {
-  width: 28rem;
+  max-width: 28rem;
   .card {
     margin-bottom: 10px !important;
     .card-body {
